<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    android:paddingTop="25dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/medium"
        android:gravity="center"
        android:text="@string/more"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sortFeed"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/sort_posts_according_to"
        android:textAppearance="@font/inter"
        android:textColorHint="@color/colorSecondPrimary"
        android:theme="@style/InputText_Overlay"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/colorSecondPrimary"
        app:boxStrokeWidth="1dp"
        app:endIconTint="@color/colorSecondPrimary"
        app:hintTextColor="@color/colorSecondPrimary">

        <AutoCompleteTextView
            android:id="@+id/auto_complete_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSearch"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/form_button"
        android:enabled="false"
        android:fontFamily="@font/medium"
        android:text="@string/filter"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginBottom="30dp"
        android:id="@+id/buttonSignout1"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/signout_button"
        android:enabled="true"
        android:fontFamily="@font/medium"
        android:text="@string/signout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

</LinearLayout>