<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="40dp"
    android:paddingHorizontal="30dp"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:fontFamily="@font/regular"
        android:textSize="18sp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/regular"
        android:hint="@string/e_mail_address"
        android:textColorHint="@color/colorSecondPrimary"
        android:background="@drawable/input_border"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:minHeight="48dp"
        android:textSize="16sp"
        android:paddingStart="20dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/regular"
        android:textColorHint="@color/colorSecondPrimary"
        android:hint="@string/passport"
        android:background="@drawable/input_border"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:minHeight="48dp"
        android:textSize="16sp"
        android:paddingStart="20dp"
        tools:ignore="RtlSymmetry"
        android:textColorHighlight="@android:color/transparent"/>

    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <CheckBox
            android:id="@+id/checkbox"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-6dp"
            app:buttonTint="@color/colorPrimary"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/regular"
            android:textSize="16sp"/>

    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressbar"
        android:visibility="gone"
        android:indeterminateTint="@color/colorPrimary"
        android:layout_gravity="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/principal_button"
        android:enabled="false"
        android:fontFamily="@font/medium"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        style="?android:attr/borderlessButtonStyle"/>

    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_weight="1"
            android:background="@drawable/shape_login"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="16sp"
            android:fontFamily="@font/regular"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center_vertical"/>

        <View
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_weight="1"
            android:background="@drawable/shape_login"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/linkSignUp"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textSize="16sp"
        android:fontFamily="@font/medium"
        android:textColor="@color/colorPrimary"/>

</LinearLayout>