<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Post">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:scrollbarSize="5dip"
        android:scrollbarFadeDuration="@integer/material_motion_duration_short_1"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/articleNameEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="25dp"
                android:autofillHints=""
                android:background="@drawable/input_border"
                android:fontFamily="@font/regular"
                android:hint="@string/article_name"
                android:inputType="text"
                android:minHeight="48dp"
                android:paddingStart="20dp"
                android:textColorHint="@color/colorSecondPrimary"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/typeOfArticle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/type_of_article"
                android:textAppearance="@font/inter"
                android:textColorHint="@color/colorSecondPrimary"
                android:theme="@style/InputText_Overlay"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/colorSecondPrimary"
                app:boxStrokeWidth="1dp"
                app:endIconTint="@color/colorSecondPrimary"
                app:hintTextColor="@color/colorSecondPrimary">

                <AutoCompleteTextView
                    android:id="@+id/auto_complete_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/priceEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="25dp"
                android:autofillHints=""
                android:background="@drawable/input_border"
                android:drawableEnd="@drawable/money_icon"
                android:fontFamily="@font/regular"
                android:hint="@string/price"
                android:inputType="text"
                android:minHeight="48dp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/colorSecondPrimary"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="25dp"
                android:autofillHints=""
                android:background="@drawable/input_border"
                android:fontFamily="@font/regular"
                android:gravity="top"
                android:hint="@string/description"
                android:inputType="text"
                android:minHeight="48dp"
                android:paddingStart="20dp"
                android:paddingTop="22dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/colorSecondPrimary"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAddImage"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/add_button"
                android:enabled="false"
                android:fontFamily="@font/medium"
                android:text="@string/add_a_picture"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAddSize"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/add_button"
                android:enabled="false"
                android:fontFamily="@font/medium"
                android:text="@string/add_a_size"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonPost"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/form_button"
                android:enabled="true"
                android:fontFamily="@font/medium"
                android:text="@string/post_an_article"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <View
                android:layout_width="match_parent"
                android:layout_height="75dp"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>