<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/card_background"
        app:cardElevation="4dp">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/imageContainer"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="horizontal"/>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/inter"
            android:text="@string/raincoat_spring_edition_85_39"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/priceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/inter"
            android:text="101.05"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/colorTitlePost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter"
        android:text="@string/colors"
        android:textSize="18sp" />

    <View
        android:id="@+id/circleColorView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/circle_shape" />

    <TextView
        android:id="@+id/sizePost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter"
        android:text="@string/sizes"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/sizeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/size_post"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="SIZE"
        android:textColor="@android:color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonMore"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/principal_button"
        android:enabled="true"
        android:fontFamily="@font/medium"
        android:text="@string/more"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>
